# shiny-engine

./: .env.example  .gitignore  README.md  hello.py  main.ipynb  main_notebook.ipynb  pyproject.toml
graph_storage/: default__vector_store.json  docstore.json  index_store.json  property_graph_store.json
hybrid_storage/: default__vector_store.json  docstore.json  index_store.json  property_graph_store.json
notebooks/: crawl.ipynb  graph_ingest.ipynb  graph_ingest_qwen25.ipynb  kg.html  kg2.html  knowledge_graph.ipynb  langchain_large_llm_knowledge_graph.ipynb  langchain_small_llm_knowledge_graph.ipynb  large_llm_knowledge_graph.ipynb  llamaindex.ipynb  llamaindex_property_graph.ipynb  property_graph.ipynb  simple_property_graph.ipynb  small_llm_knowledge_graph.ipynb
qdrant_storage/: raft_state.json
