[project]
name = "shiny-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "llama-index-embeddings-ollama>=0.6.0",
    "llama-index-graph-stores-neo4j>=0.4.6",
    "llama-index-llms-ollama>=0.5.4",
    "llama-index-vector-stores-qdrant>=0.6.0",
    "llama-index>=0.12.34",
]
